# SQDMetal

./: .gitignore  README.md  pyproject.toml
SQDMetal/PALACE/: Capacitance_Simulation.py  Eigenmode_Simulation.py  Frequency_Driven_Simulation.py  Model.py
docs/User/WorkedExamples/: XmonTest.py  two_Xmon.ipynb
src/SQDMetal/PALACE/: Model.py
