[project]
authors = [{ name = "Prasanna Pakkiam", email = "p.pakkiam@uq.edu.au" }]
description = "Tools to aid in simulating and fabricating superconducting quantum devices"
readme = "README.md"
name = "SQDMetal"
requires-python = ">= 3.9"
keywords = ['superconducting qubits, comsol']
version = "0.0.1.dev1"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Repository = "https://github.com/sqdlab/SQDMetal"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]


[tool.pixi.dependencies]
cython = "<3.0.0"
pyyaml = "==6.0"
pyvista = "*"
addict = "==2.4.0"
geopandas = "==0.12.2"
descartes = "==1.1.0"
matplotlib = "==3.7.0"
numpy = "==1.24.2"
pandas = "==1.5.3"
scipy = "==1.10.0"
pint = "==0.20.1"
pygments = "==2.14.0"
pyside2 = "==5.15.8"
qdarkstyle = "==3.1"
qutip = "==4.7.1"
scqubits = "==3.1.0"
pyepr-quantum = "==0.8.5.7"
qiskit-metal= "==0.1.2"
shapely = "==2.0.1"
jupyter = "==1.0.0"
ipython = "==8.10.0"


[tool.pixi.pypi-dependencies]
pip = "==23.0"
gmsh = "==4.11.1"
mph = "*"
SQDMetal = { path = ".", editable = true }


# Ansys only available for Windows
[tool.pixi.target.win-64.dependencies]
pyaedt = "*"

[tool.pixi.tasks]
