[project]
authors = [ { name = "Prasanna Pakkiam", email = "p.pakkiam@uq.edu.au" } ]
description = "Tools to aid in simulating and fabricating superconducting quantum devices"
readme = "README.md"
name = "SQDMetal"
requires-python = ">=3.10"
keywords = [ 'superconducting qubits', 'comsol' ]
version = "0.0.1.dev1"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = [
 "mph>=1.2.4",
 "pyvista>=0.45.2",
 "qiskit-metal",
]
urls = { repository = "https://github.com/sqdlab/SQDMetal" }

[build-system]
build-backend = "hatchling.build"
requires      = [ "hatchling" ]

[tool.uv.sources]
qiskit-metal = { git = "https://github.com/abhishekchak52/qiskit-metal" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
